--- a/client/package.json
+++ b/client/package.json
@@ -1,4 +1,5 @@
 {
+  "proxy": "http://localhost:4000/",
   "name": "client",
   "version": "0.1.0",
   "private": true,
@@ -10,6 +11,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.0.12",
+    "@supabase/supabase-js": "^2.43.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.378.0",
