--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.0.12",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@supabase/supabase-js": "^2.43.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
