--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "utils": "^0.3.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
